prevent tagline wrapping

--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -50,7 +50,8 @@
 }
 
 .tagline {
- font-size: 0.7em; 
+ font-size: 0.7em;
+ white-space: nowrap; 
 }
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Philosopher', serif;
